--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,5 @@ starlette==0.46.2
 typing-extensions==4.13.2
 typing-inspection==0.4.0
 uvicorn==0.34.2
+pydantic-settings==2.5.2
+apscheduler==3.10.4
