--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ black==25.1.0
 click==8.1.8
 colorama==0.4.6
 databases==0.9.0
-fastapi==0.115.12
+fastapi[all]==0.115.12
 greenlet==3.2.2
 h11==0.16.0
 idna==3.10
@@ -17,10 +17,10 @@ pydantic-core==2.33.1
 python-dotenv==1.0.1
 ruff==0.11.7
 sniffio==1.3.1
-sqlalchemy==2.0.31
+sqlalchemy==2.0.36
 starlette==0.46.2
 typing-extensions==4.13.2
 typing-inspection==0.4.0
-uvicorn==0.34.2
+uvicorn==0.32.0
 pydantic-settings==2.5.2
 apscheduler==3.10.4
